changes in side bar position is fixed and shifted to left by 4cm

--- a/src/components/Enord/css/Sidebar.css
+++ b/src/components/Enord/css/Sidebar.css
@@ -6,7 +6,8 @@
     flex: 0.5;
     /* width change to 150 from 200 */
     max-width: 150px;
-   
+    position: fixed;
+    left: 4cm;
   }
   
   .sidebar-container {
